--- a/action.yml
+++ b/action.yml
@@ -13,6 +13,9 @@ inputs:
   token:
     description: 'The token to use to access the GitHub API'
     required: true
+  pr_number:
+    description: 'The number of the pull request'
+    required: true
 runs:
   using: 'node16'
   main: 'dist/index.js'
