--- a/.github/workflows/pr-metadata-local.yaml
+++ b/.github/workflows/pr-metadata-local.yaml
@@ -1,8 +1,7 @@
 name: PR metadata annotation
 
-on: 
-  pull_request:
-    types: [opened, reopened, synchronize]
+on:
+  - workflow_dispatch
 
 jobs:
   annotate-pr:
@@ -10,8 +9,9 @@ jobs:
     name: Annotates pull request with metadata
     steps:
       - name: Annotate PR
-        uses: sheeley820/PR-metadata-action@for-pr
+        uses: ./
         with:
+          path: "action"
           owner: ${{ github.repository_owner }}
           repo: ${{ github.event.repository.name }}
           ref: ${{ github.head_ref }}
