--- a/.github/workflows/pr-metadata-local.yaml
+++ b/.github/workflows/pr-metadata-local.yaml
@@ -4,7 +4,7 @@ on:
   - workflow_dispatch
 
 jobs:
-  annotate-pr:
+  annotate-pr-local:
     runs-on: ubuntu-latest
     name: Annotates pull request with metadata
     steps:
