--- a/.github/workflows/pr-metadata.yaml
+++ b/.github/workflows/pr-metadata.yaml
@@ -7,6 +7,8 @@ on:
 jobs:
   annotate-pr:
     runs-on: ubuntu-latest
+    permissions:
+      issues: write
     name: Annotates pull request with metadata
     steps:
       - name: Annotate PR
