--- a/.github/workflows/pr-metadata.yaml
+++ b/.github/workflows/pr-metadata.yaml
@@ -8,7 +8,7 @@ jobs:
   annotate-pr:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      pull-requests: write
       issues: write
     name: Annotates pull request with metadata
     steps:
